Calculo del trazado de la ruta
Ya funciona la api para realizar el trazado de la ruta, cuando pulsamos en un punto del mapa nos calcula la ruta mas corta entre nuestra posicion actual y el punto escogido

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,10 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "app.paseico"
         minSdkVersion 16
@@ -34,4 +37,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.maps:google-maps-services:0.9.3'
+    implementation 'com.github.jd-alexander:library:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+
 }
