añadida routeInformation en el manifest y cambiada activity principal
Se cambia e MAIN porque así puedo probar la app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,17 +40,19 @@
                 android:name=".RouteSearchActivity"
                 android:label="@string/title_activity_route_search"
                 android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity android:name=".CreateNewRouteActivity">
-        </activity>
-
-        <activity android:name=".RouteRunnerActivity"></activity>
-        <activity android:name=".TemporalRoutesMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+        </activity>
+        <activity android:name=".CreateNewRouteActivity">
+        </activity>
+        <activity android:name=".RouteInformationActivity">
+        </activity>
+        <activity android:name=".RouteRunnerActivity"></activity>
+        <activity android:name=".TemporalRoutesMenu">
+
         </activity>
         <activity android:name=".RouteFinishedActivity" />
 
