--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="app.paseico">
 
-          package="app.paseico">
-
-
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAMLXmyf_ai85V6PdlA7jYhjL-nSgHl7mA"/>
 
     <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyAMLXmyf_ai85V6PdlA7jYhjL-nSgHl7mA" />
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
 
     <application
         android:allowBackup="true"
@@ -26,39 +22,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainMenuActivity"
+            android:label="@string/title_activity_main_menu"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="@string/google_maps_key"/>
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
         <activity
-                android:name=".MainMapActivity"
-                android:label="@string/title_activity_main_map">
-
-        </activity>
+            android:name=".MainMapActivity"
+            android:label="@string/title_activity_main_map"></activity>
         <activity
-                android:name=".RouteSearchActivity"
-                android:label="@string/title_activity_route_search"
-                android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity android:name=".CreateNewRouteActivity">
-        </activity>
-
-        <activity android:name=".RouteRunnerActivity"></activity>
-        <activity android:name=".TemporalRoutesMenu">
-
-        </activity>
+            android:name=".RouteSearchActivity"
+            android:label="@string/title_activity_route_search"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".CreateNewRouteActivity"></activity>
+        <activity android:name=".RouteRunnerActivity" />
+        <activity android:name=".TemporalRoutesMenu"></activity>
         <activity android:name=".RouteFinishedActivity" />
-
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".MainMenuActivity"/>
-        <activity android:name=".LogInActivity"/>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".LogInActivity" />
         <activity android:name=".OpeningActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
