--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,10 @@
         <activity android:name=".RouteRunnerActivity" />
         <activity android:name=".TemporalRoutesMenu"></activity>
         <activity android:name=".RouteFinishedActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".login.RegisterActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".LogInActivity" />
-        <activity android:name=".OpeningActivity">
+        <activity android:name=".login.LogInActivity" />
+        <activity android:name=".login.OpeningActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
