--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-
+    implementation 'de.hdodenhof:circleimageview:2.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 
 }
