--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,18 +40,19 @@
             android:label="@string/title_activity_route_search"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".CreateNewRouteActivity"></activity>
-        <activity android:name=".RouteRunnerActivity" />
+        <activity android:name=".RouteRunnerActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".TemporalRoutesMenu"></activity>
         <activity android:name=".RouteFinishedActivity" />
         <activity android:name=".login.RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".login.LogInActivity" />
         <activity android:name=".login.OpeningActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
