--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,13 @@
         <activity
             android:name=".RouteSearchActivity"
             android:label="@string/title_activity_route_search"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+
+        </activity>
         <activity android:name=".CreateNewRouteActivity"></activity>
         <activity android:name=".RouteRunnerActivity" />
+        <activity android:name=".RouteInformationActivity" />
         <activity android:name=".TemporalRoutesMenu"></activity>
         <activity android:name=".RouteFinishedActivity" />
         <activity android:name=".login.RegisterActivity" />
