--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".FollowersActivity"></activity>
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/title_activity_main_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -33,14 +34,14 @@
 
         <activity
             android:name=".MainMapActivity"
-            android:label="@string/title_activity_main_map"></activity>
+            android:label="@string/title_activity_main_map" />
         <activity
             android:name=".RouteSearchActivity"
             android:label="@string/title_activity_route_search"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".CreateNewRouteActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CreateNewRouteActivity" />
         <activity android:name=".RouteRunnerActivity" />
-        <activity android:name=".TemporalRoutesMenu"></activity>
+        <activity android:name=".TemporalRoutesMenu" />
         <activity android:name=".RouteFinishedActivity" />
         <activity android:name=".login.RegisterActivity" />
         <activity android:name=".MainActivity" />
