--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/title_activity_main_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -35,28 +36,27 @@
             android:name=".MainMapActivity"
             android:label="@string/title_activity_main_map">
         </activity>
+
         <activity
             android:name=".RouteSearchActivity"
             android:label="@string/title_activity_route_search"
             android:theme="@style/AppTheme.NoActionBar">
-
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".CreateNewRouteActivity"></activity>
+
+        <activity android:name=".CreateNewRouteActivity"/>
         <activity android:name=".RouteRunnerActivity" />
         <activity android:name=".RouteInformationActivity" />
-        <activity android:name=".TemporalRoutesMenu"></activity>
+        <activity android:name=".TemporalRoutesMenu"/>
         <activity android:name=".RouteFinishedActivity" />
         <activity android:name=".login.RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".login.LogInActivity" />
         <activity android:name=".login.OpeningActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
-
 </manifest>
