--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,20 +22,21 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".ModifyRouteActivity">
+        </activity>
+
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key"/>
+
         <activity
                 android:name=".MainMenuActivity"
                 android:label="@string/title_activity_main_menu"
-                android:theme="@style/AppTheme.NoActionBar"/>
-
-        <!--        I'm not 100% sure what this relates to, so ill keep this here for further study. -->
-        <!--        <activity-->
-        <!--                android:name=".RouteSearchActivity"-->
-        <!--                android:label="@string/title_activity_route_search"-->
-        <!--                android:theme="@style/AppTheme.NoActionBar"/>-->
-
+                android:theme="@style/AppTheme.NoActionBar"/> <!-- I'm not 100% sure what this relates to, so ill keep this here for further study. -->
+        <!-- <activity -->
+        <!-- android:name=".RouteSearchActivity" -->
+        <!-- android:label="@string/title_activity_route_search" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar"/> -->
         <activity android:name=".FollowersActivity"/>
         <activity android:name=".CreateNewRouteActivity"/>
         <activity android:name=".RouteRunnerActivity"/>
