--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,19 +32,13 @@
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key"/>
 
-        <activity
-            android:name=".MainMapActivity"
-            android:label="@string/title_activity_main_map">
-        </activity>
-        <activity
-            android:name=".RouteSearchActivity"
-            android:label="@string/title_activity_route_search"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity android:name=".CreateNewRouteActivity"></activity>
         <activity android:name=".RouteRunnerActivity" >
         </activity>
         <activity android:name=".TemporalRoutesMenu"></activity>
         <activity android:name=".RouteFinishedActivity" />
+        <activity android:name=".RouteInformationActivity" />
         <activity android:name=".login.RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".login.LogInActivity" />
