Rework del manifest
Los puntos ahora se suman a la cantidad actual del usuario
(Pendiente: resolver asincronia para problemas de seguridad)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity android:name=".RouteRunnerActivity" >
         </activity>
         <activity android:name=".TemporalRoutesMenu"></activity>
-        <activity android:name=".RouteFinishedActivity" />
+        <activity android:name=".RouteFinishedActivity"></activity>
+        <activity android:name=".FollowersActivity" />
         <activity android:name=".RouteInformationActivity" />
         <activity android:name=".login.RegisterActivity" />
         <activity android:name=".MainActivity" />
