--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ModifyRouteActivity">
-        </activity>
-        <activity android:name=".RouteInfModifyActivity">
-        </activity>
+        <activity android:name=".ModifyRouteActivity"/>
+        <activity android:name=".RouteInfModifyActivity"/>
 
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
@@ -48,11 +46,10 @@
                 android:value="@string/google_maps_key"/>
 
 
-        <activity android:name=".CreateNewRouteActivity"></activity>
-        <activity android:name=".RouteRunnerActivity" >
-        </activity>
-        <activity android:name=".TemporalRoutesMenu"></activity>
-        <activity android:name=".RouteFinishedActivity"></activity>
+        <activity android:name=".CreateNewRouteActivity"/>
+        <activity android:name=".RouteRunnerActivity"/>
+        <activity android:name=".TemporalRoutesMenu"/>
+        <activity android:name=".RouteFinishedActivity"/>
         <activity android:name=".FollowersActivity" />
         <activity android:name=".RouteInformationActivity" />
         <activity android:name=".login.RegisterActivity" />
