--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key"/>
 
+        <activity android:name=".mainMenu.userCreatedRoutes.IntroduceNewRouteDataActivity"/>
         <activity android:name=".ModifyRouteActivity"/>
         <activity android:name=".RouteInfModifyActivity"/>
         <activity android:name=".mainMenu.userCreatedRoutes.CreateNewRouteActivity"/>
