--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,12 @@
 
 
         <activity android:name=".CreateNewRouteActivity"></activity>
-        <activity android:name=".RouteRunnerActivity" >
+        <activity android:name=".RouteRunnerNotOrderedActivity" ></activity>
+        <activity android:name=".RouteRunnerOrderedActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".TemporalRoutesMenu"></activity>
         <activity android:name=".RouteFinishedActivity"></activity>
@@ -44,11 +49,11 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".login.LogInActivity" />
         <activity android:name=".login.OpeningActivity">
-          <intent-filter>
+         <!-- <intent-filter>
               <action android:name="android.intent.action.MAIN" />
               <category android:name="android.intent.category.LAUNCHER" />
           </intent-filter>
-
+          -->
         </activity>
     </application>
 </manifest>
