--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
 
 dependencies {
     api 'com.google.android.material:material:1.3.0-alpha03'
+    def fragment_version = "1.2.5"
+    // ...
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
