--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     testImplementation 'com.android.support.test:runner:1.0.2'
 
-
+    //androidTestImplementation 'com.21buttons:fragment-test-rule:1.0.0'
+    androidTestImplementation 'com.21buttons:fragment-test-rule:1.1.0'
 }
