--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy.dependencySubstitution {
+        substitute module('org.hamcrest:hamcrest-core:1.1') with module('junit:junit:4.10')
+    }
+}
+
 dependencies {
     api 'com.google.android.material:material:1.3.0-alpha03'
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -69,5 +75,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
-
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
