--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
+    implementation 'com.koalap:geofirestore-android:1.2.2'
 }
